--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,13 +6,15 @@
 {% endblock %}
 
 {% block link %}
-    <link rel="stylesheet" href="home/css/home.css">
+    <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
 {% endblock %}
 
 {% block content %}
 
     <header>
         <img src="" alt="logo image">
+        <button>Sign Up</button>
+        <button>Log In</button>
     </header>
 
     <h1>Create & Customize Your Dynamic QR code for FREE 
