--- a/my_QrCode/templates/my_QrCode/my_QrCode.html
+++ b/my_QrCode/templates/my_QrCode/my_QrCode.html
@@ -13,4 +13,32 @@
     <h1>
         my_QrCode
     </h1>
+
+    <header>
+        <img src="" alt="gr logo">
+    </header>
+
+    <div>
+        <img src="" alt="qr image">
+        <li> QR name </li>
+        <li> Description </li>
+        <li> (used for) </li> 
+    </div>
+
+    <div>
+        <img src="" alt="qr image">
+        <li> QR name </li>
+        <li> Description </li>
+        <li> (used for) </li> 
+    </div>
+
+    <div>
+        <img src="" alt="qr image">
+        <li> QR name </li>
+        <li> Description </li>
+        <li> (used for) </li> 
+    </div>
+    
 {% endblock %}
+
+    
