--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,8 +3,10 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vh;
-    height: 100vh;
+    /* width: 100vh; */
+    /* height: 90vh;  */
 
+    background-color: rgba(221, 230, 252, 0.9)
     
 }
+
