--- a/contacts/templates/contacts/contacts.html
+++ b/contacts/templates/contacts/contacts.html
@@ -5,7 +5,7 @@
     Contacts
 {% endblock %}
 
-{% block link %}
+{% block links %}
     <link rel="stylesheet" href="contacts/css/contacts.css">
 {% endblock %}
 
