new style code for home/henerate pages

--- a/authorization/templates/authorization/auth.html
+++ b/authorization/templates/authorization/auth.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block links %}
-    <link rel="stylesheet" href="{% static 'auth\css\auth.css' %}">
+    <link rel="stylesheet" href="{% static 'auth_styles\css\style_auth.css' %}">
 {% endblock %}
 
 {% block content %}
