--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -6,17 +6,17 @@
 {% endblock %}
 
 {% block links %}
-    <link rel="stylesheet" href="{% static 'home/css/home_styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles_home/css/home_styles.css' %}">
 {% endblock %}
 
 {% block content %}
 
-<h1 class="intro">
-    Create & Customize <br> <span class="free">Your Dynamic QR code for <span class="free2">FREE</span></span>
-    <span class="gray-text">Easily generate, manage and statistically track your QR codes</span>
-</h1>
+    <h1 class="intro">
+        Create & Customize <br> <span class="free">Your Dynamic QR code for <span class="free2">FREE</span></span>
+        <span class="gray-text">Easily generate, manage and statistically track your QR codes</span>
+    </h1>
 
-    
+
     <div class="chart">
         <div class="step">
             <p class="number">1</p>
@@ -43,21 +43,26 @@
                 <div class="line"></div>
             </div>
         </div>
+
+        <div class="step">
+            <p class="number"><i class='bx bx-check-double'></i></p>
+        </div>
     </div>
-
-
 
 
     <hr>
-    <div class="about-us">
-        <h1>What Are We Doing</h1>
-        <p>QR-aft provides you the ability to create fully customization dynamic QR codes of various categories with further collection of scan statistics.</p>
-    </div>
+    <div class="box-info">
+        <div class="about-us">
+            <h1>What Are We Doing</h1>
+            <li>QR-aft provides you the ability to create fully customization dynamic QR codes of various categories with further collection of scan statistics.</li>
+        </div>
 
-    <div class="benefits">
-        <h1>Out Benefits</h1>
-        <p>Our QR code generator is easy to use, supports multiple types (URLs, text, Image, etc.), offers customization designs with logos and colors, and provides high-quality downloads in PNG, JPG, or SVG formats. With secure, reliable, and mobile-friendly functionality, it’s perfect for personal or business use, with flexible plans, including a free option.</p>
+        <div class="benefits">
+            <h1>Our Benefits</h1>
+            <li>Our QR code generator is easy to use, supports multiple types (URLs, text, Image, etc.), offers customization designs with logos and colors, and provides high-quality downloads in PNG, JPG, or SVG formats. With secure, reliable, and mobile-friendly functionality, it’s perfect for personal or business use, with flexible plans, including a free option.</li>
+        </div>
     </div>
+    
     <hr>
 
     <h2>Plans & Pricing</h2>
