--- a/registration/templates/registration/reg.html
+++ b/registration/templates/registration/reg.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block links %}
-    <link rel="stylesheet" href="{% static 'reg\css\reg.css' %}">
+    <link rel="stylesheet" href="{% static 'reg_styles\css\style_reg.css' %}">
 {% endblock %}
 
 {% block content %}
