--- a/generate/templates/generate/generate.html
+++ b/generate/templates/generate/generate.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block links %}
-    <link rel="stylesheet" href="generate/css/generate.css">
+    <link rel="stylesheet" href="{% static 'generate_styles/css/style_generate.css' %}">
 {% endblock %}
 
 {% block content %}
