--- a/my_QrCode/templates/my_QrCode/my_QrCode.html
+++ b/my_QrCode/templates/my_QrCode/my_QrCode.html
@@ -6,43 +6,57 @@
 {% endblock %}
 
 {% block links %}
-    <link rel="stylesheet" href= "{% static 'my_QrCode/css/my_QrCode.css' %}">
+    <link rel="stylesheet" href= "{% static 'my_QrCode_styles/css/style_my_QrCode.css' %}?v={{ timestamp }}">
 {% endblock %}
 
 {% block content %}
-    <h1>
-        my_QrCode
-    </h1>
+    <div class="container">
+        <div class="qr-info">
+            <h3>QR Name</h3>
 
-    <header>
-        <img src="" alt="gr logo">
-    </header>
+            <div class="qr-body">
+                <img src="{% static 'img/qr-img.svg' %}" alt="qr image">
 
-    <div class="qr-info">
-        <div>
-            <img src="" alt="qr image">
-            <li> QR name </li>
-            <li> Description </li>
-            <li> (used for) </li> 
+                <div class="qr-prop">
+                    <div class="qr-btn">
+                        <button class="download"><i class='bx bxs-download'></i></button>
+                        <button class="change"><i class='bx bxs-edit-alt'></i></button> 
+                    </div>
+                    
+                    <p class="creation-time">08.02.25</p>
+                </div>
+                
+            </div>
+
+            <div class="description">
+                <p>Description for this qr code</p>
+            </div>
         </div>
 
-        <div>
-            <img src="" alt="qr image">
-            <li> QR name </li>
-            <li> Description </li>
-            <li> (used for) </li> 
-        </div>
-
-        <div>
-            <img src="" alt="qr image">
-            <li> QR name </li>
-            <li> Description </li>
-            <li> (used for) </li> 
-        </div>
+        <div class="container">
+            <div class="qr-info">
+                <h3>QR Name</h3>
+    
+                <div class="qr-body">
+                    <img src="{% static 'img/qr-img.svg' %}" alt="qr image">
+    
+                    <div class="qr-prop">
+                        <div class="qr-btn">
+                            <button class="download"><i class='bx bxs-download'></i></button>
+                            <button class="change"><i class='bx bxs-edit-alt'></i></button> 
+                        </div>
+                        
+                        <p class="creation-time">02.02.23</p>
+                    </div>
+                    
+                </div>
+    
+                <div class="description">
+                    <p>Description for this qr code</p>
+                </div>
+            </div>
     </div>
 
-    
-    
 {% endblock %}
 
     
