--- a/authorization/templates/authorization/auth.html
+++ b/authorization/templates/authorization/auth.html
@@ -15,16 +15,17 @@
 
         <div class="form-box login">
             <h2 class="title">Login</h2>
-            <form action="#">
+            <form action="" method="post">
+                {% csrf_token %}
                 <div class="input-box">
-                    <input type="text" required>
-                    <label for="">Username</label>
-                    <i class='bx bxs-user'></i>
+                    <input name="username" type="name" required>
+                    <label for="username">Name</label>
+                    <i class='bx bxs-envelope'></i>
                 </div>
     
                 <div class="input-box">
-                    <input type="password" required>
-                    <label for="">Pasword</label>
+                    <input name='password' type="password" required>
+                    <label for="password">Pasword</label>
                     <i class='bx bx-lock'></i>
                 </div>
 
