--- a/plan_settings/templates/plan_settings/plan_settings.html
+++ b/plan_settings/templates/plan_settings/plan_settings.html
@@ -5,12 +5,94 @@
     Plan_settings
 {% endblock %}
 
-{% block link %}
-    <link rel="stylesheet" href="plan_settings/css/plan_settings.css">
+{% block links %}
+    <link rel="stylesheet" href="{% static 'style_plan_settings/css/plan_settings_style.css' %}">
 {% endblock %}
 
 {% block content %}
-    <h1>
-        Plan_settings
-    </h1>
+    <h1>Plans and prising</h1>
+
+    <div class="plan-container">
+        <div class="free-plan" id="plan-box">
+            <div class="top-box">
+                <h2>FREE</h2>
+                <div class="pricing">
+                    <p class="price-plan">$0/</p>
+                    <p class="per-month">Month</p>
+                </div>
+            </div>
+            
+            <div class="p-container">
+                <p>Create a single QR code with a 6-month validity. <br></p>
+                <hr>
+                <p>Basic customization options available. <br></p>
+                <hr>
+                <p>Available at no cost for registered users. <br></p>
+                <hr>
+            </div>
+
+            <button class="upg-btn">Upgrade</button>
+
+            
+        </div>
+        
+        <div class="standart-plan" id="plan-box">
+            <div class="top-box">
+                <h2>STANDART</h2>
+                <div class="pricing">
+                    <p class="price-plan">$2/</p>
+                    <p class="per-month">Month</p>
+                </div>
+            </div>
+
+            <div class="p-container">
+                <p>Create and customize up to 10 QR codes per month. <br></p>
+                <hr>
+                <p>Priced at $2 per month for access. <br></p>
+                <hr>
+                <p>More design options for your QR codes, including colors and logos. <br></p>
+                <hr>
+            </div>
+
+            <button class="upg-btn">Upgrade</button>
+            
+        </div>
+
+        <div class="pro-plan" id="plan-box">
+            <div class="top-box">
+                <h2>PRO</h2>
+                <div class="pricing">
+                    <p class="price-plan">$10/</p>
+                    <p class="per-month">Month</p>
+                </div>
+            </div>
+            
+            <div class="p-container">
+                <p>Generate up to 100 QR codes each month. <br></p> 
+                <hr>
+                <p>Full access to all customization and branding options. <br></p>
+                <hr>
+                <p>Access to premium customer support for faster assistance. <br></p>
+                <hr>
+            </div>
+            
+            <button class="upg-btn">Upgrade</button>
+        </div>
+    </div>
+    
+    <!-- <h3>Payment methods</h3> -->
+    <!-- <div class="pay-choises">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        
+
+
+    </div> -->
+
+    
+
 {% endblock %}
