--- a/registration/templates/registration/reg.html
+++ b/registration/templates/registration/reg.html
@@ -10,30 +10,39 @@
 {% endblock %}
 
 {% block content %}
+
+    {% if form.errors %}
+        <p>There was an error with your form</p>
+    {% endif %}
+    
+
     <div class="wrapper">
         <span class="rotate-bg"></span>
 
         <div class="form-box reg">
             <h2 class="title">Sign Up</h2>
-            <form action="#">
+            
+            <form action="" method="POST">
+                {% csrf_token %} 
+                   
                 <div class="input-box">
-                    <input type="text" required>
-                    <label for="">Username</label>
+                    {{ form.username }}
+                    <label for="id_username">Username</label>
                     <i class='bx bxs-user'></i>
                 </div>
-
+            
                 <div class="input-box">
-                    <input type="email" required>
-                    <label for="">Email</label>
+                    {{ form.email }}
+                    <label for="id_email">Email</label>
                     <i class='bx bxs-envelope'></i>
                 </div>
-
+            
                 <div class="input-box">
-                    <input type="password" required>
-                    <label for="">Pasword</label>
+                    {{ form.password }}
+                    <label for="id_password">Password</label>
                     <i class='bx bx-lock'></i>
                 </div>
-
+            
                 <button type="submit" class="btn-login">Sign Up</button>
                 
                 <div class="linkTxt">
@@ -45,5 +54,33 @@
         <div class="info-text reg">
             <h2>Join our team now!</h2>
             <p>Please enter your details.</p>
+        </div>
     </div>
 {% endblock %}
+
+<!-- <form action="" method= "post">
+                {% csrf_token %}    
+                <div class="input-box">
+                    <input name="username" type="text" required>
+                    <label for="username">Username</label>
+                    <i class='bx bxs-user'></i>
+                </div>
+
+                <div class="input-box">
+                    <input name="email" type="email" required>
+                    <label for="email">Email</label>
+                    <i class='bx bxs-envelope'></i>
+                </div>
+
+                <div class="input-box">
+                    <input name="password" type="password" required>
+                    <label for="password">Password</label>
+                    <i class='bx bx-lock'></i>
+                </div>
+
+                <button type="submit" class="btn-login">Sign Up</button>
+                
+                <div class="linkTxt">
+                    <p>Already have an account? <a href="{% url 'auth' %}" class="login-link">Login</a></p>
+                </div>
+            </form> -->
