--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}?">
 
         {% block links %} {% endblock %}
     </head>
@@ -21,17 +21,28 @@
                 <ul class="nav-links">
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'contacts' %}">Contacts</a></li>
-                    <!-- <li><a href="{% url 'auth' %}">Login</a></li> -->
-                    <!-- <li><a href="{% url 'registration' %}">Sign Up</a></li> -->
                     <li><a href="{% url 'my_qrcode' %}">My QR Codes</a></li>
                     <li><a href="{% url 'plan_settings' %}">Plan Settings</a></li>
                     <li><a href="{% url 'generate' %}">Generate QR Code</a></li>
-                </ul>  
+                </ul> 
             </nav>
 
-            <a href="{% url 'auth' %}"><button class="btn-log">Login</button></a>
-            <a href="{% url 'registration' %}"><button class="btn-reg">Sign Up</button></a>
+
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}"><button class="btn-log">Logout</button></a>
+                <p>{{ user.username }}</p>
+            {% else %}
+                <a href="{% url 'auth' %}"><button class="btn-log">Login</button></a>
+                <a href="{% url 'registration' %}"><button class="btn-reg">Sign Up</button></a>
+            {% endif %}
         </header>
+
+        {% if messages %}
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+
+        {% endif %}
 
         {% block content %}
         {% endblock %}
