--- a/generate/templates/generate_page/generate.html
+++ b/generate/templates/generate_page/generate.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block links %}
-    <link rel="stylesheet" href="{% static 'generate_page/css/styles_generation.css' %}">
+    <link rel="stylesheet" href="{% static 'generate_page/css/style_generation.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -14,72 +14,83 @@
         <form action="" method="post" enctype="multipart/form-data" >
             {% csrf_token %}
     
-            <div class="container">
-                <button class="accordion">
-                    <span><span class="icon"><i class='bx bx-world'></i></span> ENTER CONTENT</span>
-                    <span>+</span>
-                </button>
-                <div class="panel">
-                    <label for="{{ form.name.id_for_label }}">Name</label>
-                    {{ form.name }}
-    
-                    <label for="{{ form.link.id_for_label }}">Your url</label>
-                    {{ form.link }}
-                </div>
-    
-                <button class="accordion">
-                    <span><span class="icon"><i class='bx bxs-palette'></i></span> SET COLORS</span>
-                    <span>+</span>
-                </button>
-                <div class="panel">
-    
-                    <label for="{{ form.bg_color.id_for_label }}">Foreground Color</label>
-                    
-                    <div class="mb-3">
-                        <input type="radio" name="bg_color" value="#ffffff"> Basic color
-                        <input type="radio" name="bg_color" value="#f8f9fa"> Gradient
+            <div class="qr-creation">
+                <div class="container">
+                    <button class="accordion">
+                        <span><span class="icon"><i class='bx bx-world'></i></span> ENTER CONTENT</span>
+                        <span>+</span>
+                    </button>
+                    <div class="panel">
+                        <label for="{{ form.name.id_for_label }}">Name</label>
+                        {{ form.name }}
+        
+                        <label for="{{ form.link.id_for_label }}">Your url</label>
+                        {{ form.link }}
                     </div>
-    
-                    {{ form.bg_color }}
-    
-                    <label for="{{ form.fg_color.id_for_label }}">Background Color</label>
-                    {{ form.fg_color }}
-                </div>
+        
+                    <button class="accordion">
+                        <span><span class="icon"><i class='bx bxs-palette'></i></span> SET COLORS</span>
+                        <span>+</span>
+                    </button>
+                    <div class="panel">
+        
+                        <label for="{{ form.bg_color.id_for_label }}">Foreground Color</label>
+                        
+                        <div class="mb-3">
+                            <input type="radio" name="color" value="#ffffff" class="b-color"> Basic color
+                            <input type="radio" name="color" value="#f8f9fa" class="g-color"> Gradient
+                        </div>
+        
+                        {{ form.bg_color }}
+        
+                        <label for="{{ form.fg_color.id_for_label }}">Background Color</label>
+                        {{ form.fg_color }}
+                    </div>
                 
+                    <button class="accordion">
+                        <span><span class="icon"><i class='bx bx-image'></i></span> ADD LOGO IMAGE</span>
+                        <span>+</span>
+                    </button>
+                    <div class="panel">
+                        {{ form.image }}
+                    </div>
+                    
+                    <button class="accordion">
+                        <span><span class="icon"><i class='bx bx-qr' ></i></span> CUSTOMIZE DESIGN</span>
+                        <span>+</span>
+                    </button>
+                    <div class="panel">
+                        <label for="{{ form.border_width.id_for_label }}">Border Width</label>
+                        {{ form.border_width }}
     
+                        <label for="{{ form.patterns.id_for_label }}">Patterns</label>
+                        {{ form.patterns }}
+                    </div>
+                    
+                    <div class="pattern-type">
+                        <label>Choose your QR code pattern:</label><br>
+                        <img src="{% static 'qr/patterns/square.png' %}" class="style-option" data-style="square">
+                        <img src="{% static 'qr/patterns/dots.png' %}" class="style-option" data-style="dots">
+                        <img src="{% static 'qr/patterns/lines.png' %}" class="style-option" data-style="lines">
+                    </div>
+                </div>
     
-                <button class="accordion">
-                    <span><span class="icon"><i class='bx bx-image'></i></span> ADD LOGO IMAGE</span>
-                    <span>+</span>
-                </button>
-                <div class="panel">
-                    {{ form.image }}
-                </div>
-                
-                <button class="accordion">
-                    <span><span class="icon"><i class='bx bx-qr' ></i></span> CUSTOMIZE DESIGN</span>
-                    <span>+</span>
-                </button>
-                <div class="panel">
-                    {{ form.patterns }}
-                </div>
-                
-                <div class="pattern-type">
-                    <label>Choose your QR code pattern:</label><br>
-                    <img src="{% static 'qr/patterns/square.png' %}" class="style-option" data-style="square">
-                    <img src="{% static 'qr/patterns/dots.png' %}" class="style-option" data-style="dots">
-                    <img src="{% static 'qr/patterns/lines.png' %}" class="style-option" data-style="lines">
+                <div class="qr-preview">
+                    <!-- <img src="{% static 'qr/patterns/square.png' %}" alt="qr code preview" class="qr-image"> -->
+                    
+                    {% if success %}
+                        <img src="{{ qr_image_url }}" alt="QR Code" class="qr-image">
+
+                        <button type="submit" class="download-btn">Dowload</button> 
+                    {% endif %}
                 </div>
             </div>
+
             <button type="submit" class="form-btn">Generate</button>
         </form>
     
-        <div class="qr-preview">
-            <img src="" alt="qr code preview">
-        </div>
     </div>
-    
-    <script src="{% static 'generate_page/js/page_generate.js' %}" defer></script>
+    <script src="{% static 'generate_page/js/generate.js' %}" defer></script>
 {% endblock %}
 
     <!-- {% if qr_image %}
