--- a/generate/static/generate_page/css/style_generation.css
+++ b/generate/static/generate_page/css/style_generation.css
@@ -10,16 +10,6 @@
     background-color: white;
     padding: 15px;
     border-radius: 10px;
-    margin: 20px;
-}
-
-.info{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-
-    gap: 20px;
 }
 
 .accordion{
@@ -58,7 +48,7 @@
 .accordion:hover{
     background-color: rgb(179, 199, 230);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+    
 }
 
 .panel{
@@ -77,7 +67,7 @@
 .panel select, 
 .panel textarea{
     display: block;
-
+    
     width: 100%;
     padding: 6px 8px;
     margin: 0;
@@ -91,14 +81,14 @@
     font-weight: bold;
     font-size: 14px;
     margin: 4px;
-
+    
     color: #4f4949;
 }
 
 input[type= 'color']{
     width: 100px;
     height: 30px;
-
+    
     padding: 0;
     margin: 0;
     /* border: none; */
@@ -133,7 +123,7 @@ input[type= 'color']{
 .pattern-type img{
     width: 60px;
     height: 60px;
-
+    
     margin-right: 10px;
     margin-top: 0px;
     cursor: pointer;
@@ -161,7 +151,28 @@ input[type= 'color']{
     font-size: 16px;
 }
 
+
+.qr-creation{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: row;
+    
+    gap: 30px;
+    padding: 30px;
+}
+
+.qr-image{
+    width: 300px;
+    height: 300px;
+
+    border-radius: 15px;
+}
+
 .qr-preview{
-    max-width: 100%;
-    height: auto;
+    /* width: 100%; */
+    height: 100%;
+
+
+    background-color: white;
 }
